--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -1,23 +1,36 @@
-<div class="calculator">
+<body>
+  <div class="container">
+    <h2>Calculadora Matemática</h2>
 
-    <form>
-        <div class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span> 
-            <input id="operator1" [(ngModel)]="operator1" type="number" class="form-control operator1" name="operator1" placeholder="0.0">
-        </div>
+    <div>
+      <label for="operando1">Operando 1:</label>
+      <input type="number" id="operando1" [(ngModel)]="operando1" />
+    </div>
 
-        <div class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-            <input id="operator2" [(ngModel)]="operator2" type="number" class="form-control operator2" name="operator2" placeholder="0.0">
-        </div>
-    </form>
+    <div>
+      <label for="operando2">Operando 2:</label>
+      <input type="number" id="operando2" [(ngModel)]="operando2" />
+    </div>
 
-    <i class="glyphicon glyphicon-plus addition-button"
-        (click)="addition()"></i>
+    <div class="buttons">
+      <button class="factorial-button" (click)="calcularFactorial()">
+        Factorial
+      </button>
+      <button class="logaritmo-button" (click)="calcularLogaritmoNatural()">
+        Logaritmo Natural
+      </button>
+      <button class="base-button" (click)="calcularLogaritmoBase10()">
+        Logaritmo Base 10
+      </button>
+      <button class="porcentaje-button" (click)="calcularPorcentaje()">
+        Porcentaje
+      </button>
+      <button class="raiz-button" (click)="calcularRaiz()">Raíz</button>
+    </div>
 
-    <i class="glyphicon glyphicon-minus substraction-button"
-        (click)="substraction()"></i>
-
-</div>
-
-<span class="result">{{ result }}</span>
+    <div class="resultado">
+      <h3>Resultado:</h3>
+      <p>{{ resultado }}</p>
+    </div>
+  </div>
+</body>
